--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,59 @@ code {
 .cursor-pointer {
   cursor: pointer;
 }
+
+.bg1 {
+  width: auto;
+  height: 500px;
+  background-image: url(../public/iu1.jpg);
+  background-size: cover;
+  background-position: center 70%;
+}
+
+.bg2 {
+  width: auto;
+  height: 500px;
+  background-image: url(../public/iu2.jpg);
+  background-size: cover;
+  background-position: center center
+}
+
+.bg3 {
+  width: auto;
+  height: 500px;
+  background-image: url(../public/iu3.jpg);
+  background-size: cover;
+  background-position: center center;
+}
+
+.bg4 {
+  width: auto;
+  height: 500px;
+  background-image: url(../public/iu4.jpg);
+  background-size: cover;
+  background-position: center center
+}
+
+.title_cover {
+  position: relative;
+}
+
+.title {
+  width:500px;
+  position: absolute;
+  bottom:50px;
+  z-index: 1;
+  font-size: 25px;
+  padding: 10px 0px;
+  background-color: rgba(255,255,255,0.8);
+}
+
+.bottom {
+  width:100%;
+  height:50px;
+  margin-top:20px;
+  color:#fff;
+  text-align: center;
+  line-height: 50px;
+  /* background-color: #000; */
+}
