--- a/src/index.css
+++ b/src/index.css
@@ -54,21 +54,33 @@ code {
 }
 
 .title {
-  width:500px;
+  width: 500px;
   position: absolute;
-  bottom:50px;
+  bottom: 50px;
   z-index: 1;
   font-size: 25px;
   padding: 10px 0px;
-  background-color: rgba(255,255,255,0.8);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .bottom {
-  width:100%;
-  height:50px;
-  margin-top:20px;
-  color:#fff;
+  width: 100%;
+  height: 50px;
+  margin-top: 20px;
+  color: #fff;
   text-align: center;
   line-height: 50px;
   /* background-color: #000; */
+}
+
+.page-link,
+.page-link:hover {
+  color: #353535;
+}
+
+.active>.page-link,
+.active>.page-link:hover {
+  background-color: #353535;
+  border: #353535;
+  color: #fff;
 }
